--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   }
  
 .container2 {
-    background-image: url(/image/backnew.png);
+    background-image: url(./image/backnew.PNG);
 background-position: center;
 background-size: cover;
 background-repeat: no-repeat;
