--- a/res.css
+++ b/res.css
@@ -1,8 +1,5 @@
 @media (max-width:575.98px){
-    .container2{
-        height:19rem;
-         overflow: hidden;  
-    }
+   
     .container2 p, .container2 h1 {
     text-align: center;
     font-size: 1.2rem;
@@ -39,10 +36,7 @@
         width:100%;
     }}
     @media (min-width:576px){
-        .container2{
-           height:17rem;
-           overflow: hidden;
-        }
+        
         .container2 p,.container2 h1{
        margin:0 20%;
        font-size: 1.2rem;
@@ -84,10 +78,7 @@
 }}
 @media(min-width:768px){
 
-    .container2{
-        height:20rem;
-        overflow: hidden;
-     }
+   
      .container2 p,.container2 h1{
     margin:0 20%;
     font-size: 1.6rem;
@@ -107,10 +98,8 @@
         width:12rem;
     }
 }
-@media(min-width:992px){.container2{
-    max-height:400px;
-    overflow: hidden;
- }
+@media(min-width:992px){
+   
  .container2 p,.container2 h1{
 margin:0 20%;
 font-size:2rem;
@@ -132,10 +121,7 @@ font-size:2rem;
     width:19rem;
 }}
 @media(min-width:1200px){
-    .container2{
-        height:35rem;
-        overflow: hidden;
-    }
+   
     .containerabout img{
         display: flex;
         width:40%;
@@ -157,10 +143,7 @@ font-size:2rem;
          }
 }
 @media(min-width:1400px){
-    .container2{
-        max-height:500px;
-        overflow: hidden;
-     }
+    
      .container2 p{
         margin:0 20%;
         font-size:45px;
